--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,30 @@
+* {
+    box-sizing: border-box;
+}
 .container {
     padding: 20px;
+    max-width: 300px;
 }
 
 .circle {
-    display: inline-block;
+    background-color: red;
     border-radius: 10px;
-    height: 10px;
-    width: 10px;
+    height: 20px;
+    width: 20px;
+}
+
+.circle-box {
+    display: inline-block;
+    width: 10%;
+}
+
+.status {
+    display: inline-block;
+}
+
+.btn {
+    width: 85%;
+    height: 40px;
+    border: 3px solid  ;
+    background-color: transparent;
 }
